@@ -13,7 +13,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: info.test,v 1.25.2.20 2009/09/07 16:20:00 dgp Exp $
+# RCS: @(#) $Id: info.test,v 1.25.2.21 2009/09/07 20:02:05 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -1822,6 +1822,11 @@ test info-30.47 {TIP 280 for compiled [subst]} {
     subst {$a(
 [dict get [info frame 0] line])} ; # 1823
 } YES
+
+test info-30.48 {Bug 2850901} testevalex {
+    testevalex {return -level 0 [format %s {}
+][reduce [info frame 0]]} ; # line 2 of the eval
+} {type eval line 2 cmd {info frame 0} proc ::tcltest::RunTest}
 
 # -------------------------------------------------------------------------
 
